añadido procesado visual de examenes por lotes

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -531,6 +531,158 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processing pdfs + extracting info 2 in 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| export\n",
+    "# Importing required libraries\n",
+    "from fastcore.all import AttrDict\n",
+    "import io\n",
+    "from pdf2image import convert_from_path\n",
+    "from pypdf import PdfReader\n",
+    "import openai\n",
+    "import os\n",
+    "import base64\n",
+    "import requests\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "load_dotenv()  # Carga las variables de entorno desde .env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def load_moodle_student_info(paths=[\"./../data/courseid_422_participants.csv\", \"./../data/courseid_23101_participants.csv\"]):\n",
+    "    dfs = [ pd.read_csv(filename) for filename in paths ]\n",
+    "\n",
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "    # Puedes opcionalmente limpiar espacios y convertir a mayúsculas para facilitar coincidencias\n",
+    "    df[\"Nombre\"] = df[\"Nombre\"].str.strip().str.upper()\n",
+    "    df[\"Apellido(s)\"] = df[\"Apellido(s)\"].str.strip().str.upper()\n",
+    "\n",
+    "    guia_texto = \"\\n\".join(\n",
+    "        f\"{row['Nombre']} {row['Apellido(s)']} - Grupo: {row['Grupos']}\"\n",
+    "        for _, row in df.iterrows()\n",
+    "    )\n",
+    "    return df, guia_texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "#_, guia_texto = load_moodle_student_info()\n",
+    "#print(guia_texto[:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def process_student_info(path = '../example_data/1.pdf'):\n",
+    "    # Open and read the PDF file\n",
+    "    reader = PdfReader(path)\n",
+    "    # Check if the PDF has more than one page\n",
+    "    #  AQUI NECESITO LA PARTE EN LA QUE YA TENGO LA LISTA DE LAS PÁGINAS QUE REALMENTE ME INTERESAN\n",
+    "    if len(reader.pages) > 1:\n",
+    "        print(\"The PDF has more than one page. Only the first page will be converted to an image.\")\n",
+    "    # Convert the first page of the PDF to an image\n",
+    "    images = convert_from_path(path, first_page=1, last_page=1, fmt='jpeg')\n",
+    "    # Crop the image\n",
+    "    image = images[0].crop((0, 0, images[0].width, 450))\n",
+    "    image\n",
+    "    buffered = io.BytesIO()\n",
+    "    images[0].save(buffered, format=\"JPEG\")\n",
+    "    base64_image = base64.b64encode(buffered.getvalue()).decode('utf-8')\n",
+    "    base64_image\n",
+    "    # Crop the image\n",
+    "    image = images[0].crop((0, 0, images[0].width, 450))\n",
+    "    images\n",
+    "    api_key = os.environ[\"OPENAI_API_KEY\"] # *\n",
+    "    prompt = \"\"\"Extract the last name (Apellidos in Spanish), the first name (Nombre in Spanish) and the group (Grupo in Spanish)\n",
+    "    from the top of the image. You will find them handwritten after the labels `Apellidos`,  `Nombre` and `Grupo` respectively. The fields of your JSON output will have those exact same label names\n",
+    "    Here is a list of expected students and their groups as a reference: \n",
+    "     {guia_texto}\n",
+    "    \"\"\" # *\n",
+    "    model = \"gpt-4o\"\n",
+    "    headers = {\n",
+    "      \"Content-Type\": \"application/json\",\n",
+    "      \"Authorization\": f\"Bearer {api_key}\"\n",
+    "    }\n",
+    "\n",
+    "    payload = {\n",
+    "      \"model\": f'{model}',\n",
+    "      \"response_format\": { \"type\": \"json_object\" },\n",
+    "      \"messages\": [\n",
+    "        {\n",
+    "            \"role\": \"system\", \n",
+    "            \"content\": \"You are a helpful assistant designed to see an exam and output JSON \\\n",
+    "               with the extracted information. You will be given an image of the exam.\\\n",
+    "               the default group in case of empty string is extraviado\",   \n",
+    "        },\n",
+    "        {\n",
+    "          \"role\": \"user\",\n",
+    "          \"content\": [\n",
+    "            {\n",
+    "              \"type\": \"text\",\n",
+    "              \"text\": f\"{prompt}\"\n",
+    "            },\n",
+    "            {\n",
+    "              \"type\": \"image_url\",\n",
+    "              \"image_url\": {\n",
+    "                \"url\": f\"data:image/jpeg;base64,{base64_image}\"\n",
+    "              }\n",
+    "            }\n",
+    "          ]\n",
+    "        }\n",
+    "      ],\n",
+    "      \"max_tokens\": 300\n",
+    "    }\n",
+    "\n",
+    "    response = requests.post(\"https://api.openai.com/v1/chat/completions\", headers=headers, json=payload)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
